add usable frontend

--- a/web/front/src/App.css
+++ b/web/front/src/App.css
@@ -1,42 +1,83 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+header {
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    color: white;
+    padding: 0 1em
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.mainPage {
+    display: flex;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bookCard {
+    display: flex;
+    margin-bottom: 2em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.bookCard h3 {
+    margin-top: 0;
 }
 
-.card {
-  padding: 2em;
+.bookImgCol {
+    margin-right: 1em;
 }
 
-.read-the-docs {
-  color: #888;
+.cardsList {
+    margin: 0 1em;
+}
+
+.filters {
+    padding: 1em;
+}
+
+.cart {
+    width: 0px;
+    min-width: 0px;
+    transition: min-width 1s ease;
+    overflow: hidden;
+}
+
+.cartVisible {
+    min-width: 600px;
+}
+
+.validationTip {
+    color: red;
+}
+
+.cartItem {
+    border: 1px solid black;
+    padding: 1em;
+    margin-bottom: 1em;
+}
+
+.cartItemHeader {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.cartItem input {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+@media screen and (max-width: 600px) {
+    .mainPage {
+        flex-direction: column;
+    }
+
+    .bookCard {
+        flex-direction: column;
+    }
+
+    .bookImgCol {
+        margin-right: 0;
+    }
+
+    .cartVisible {
+        min-width: 100%;
+    }
+
 }
